.provarCaches/00D6C0000000xA6UAI/objects/Dataplier__Execution__c.object
<CustomObject>
    <fields>
        <fullName>Dataplier__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataplier__Batch_Status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dataplier__Execution_Sequence__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Execution Sequence</label>
        <referenceTo>Dataplier__Execution_Sequence__c</referenceTo>
        <relationshipLabel>Executions</relationshipLabel>
        <relationshipName>Executions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dataplier__Space_Required__c</fullName>
        <label>Space required (KB)</label>
        <summarizedField>Dataplier__Execution_Step__c.Dataplier__Space_Required__c</summarizedField>
        <summaryForeignKey>Dataplier__Execution_Step__c.Dataplier__Execution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dataplier__Started__c</fullName>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dataplier__Total_Records__c</fullName>
        <label>Total records</label>
        <summarizedField>Dataplier__Execution_Step__c.Dataplier__Records_Processed__c</summarizedField>
        <summaryForeignKey>Dataplier__Execution_Step__c.Dataplier__Execution__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Execution</label>
    <listViews>
        <fullName>Dataplier__All</fullName>
        <columns>NAME</columns>
        <columns>Dataplier__Execution_Sequence__c</columns>
        <columns>Dataplier__Started__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executions</pluralLabel>
    <recordTypes>
        <fullName>Dataplier__Execution</fullName>
        <active>true</active>
        <label>Execution</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>